[package]
name = "streaming-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
tokio-test = "0.4"