[package]
name = "streaming-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "1.0"
http = "1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
testcontainers = "0.15.0"
testcontainers-modules = "0.3.7"
tokio-test = "0.4"
